[gd_scene load_steps=3 format=3 uid="uid://cbh5h86vdbunv"]

[ext_resource type="Script" uid="uid://fimwx4x4e7dg" path="res://scripts/main/ForgePanel.gd" id="1_4xvns"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xvns"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.266667, 0.266667, 0.266667, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ForgePanel" type="Control" groups=["GearUI", "ReincarnationUI"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4xvns")

[node name="MainPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4xvns")

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="TitleLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Forge Items"
horizontal_alignment = 1

[node name="ObjectTypeSelector" type="OptionButton" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "weapon"
popup/item_0/id = 0
popup/item_1/text = "armor"
popup/item_1/id = 1
popup/item_2/text = "relic"
popup/item_2/id = 2

[node name="CostLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cost: 0 Stone, 0 Wood, 0 Velarite"

[node name="ItemPreviewPanel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 150)
layout_mode = 2

[node name="ButtonsBox" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ForgeButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer/ButtonsBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Forge"

[node name="ChiudiButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer/ButtonsBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[node name="ResultLabel" type="RichTextLabel" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
scroll_active = false
visible_characters = 0
